--- a/ConvenienceSystemApp/ConvenienceSystemApp.WinPhone/MainPage.xaml
+++ b/ConvenienceSystemApp/ConvenienceSystemApp.WinPhone/MainPage.xaml
@@ -11,6 +11,6 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Portrait" Orientation="Portrait"
+    SupportedOrientations="Landscape" Orientation="Landscape"
     shell:SystemTray.IsVisible="True">
 </winPhone:FormsApplicationPage>
