--- a/ConvenienceSystemApp/ConvenienceSystemApp/pages/StartPage.xaml
+++ b/ConvenienceSystemApp/ConvenienceSystemApp/pages/StartPage.xaml
@@ -2,5 +2,5 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ConvenienceSystemApp.pages.StartPage">
-	<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+	<Button Text="Test it" VerticalOptions="Center" HorizontalOptions="Center" x:Name="StartButton" />
 </ContentPage>
