--- a/ConvenienceSystemApp/ConvenienceSystemApp/pages/StartPage.xaml
+++ b/ConvenienceSystemApp/ConvenienceSystemApp/pages/StartPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ConvenienceSystemApp.pages.StartPage">
     <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Orientation="Vertical">
-		<Button Text="Test it" VerticalOptions="Center" HorizontalOptions="Center" x:Name="StartButton" />
+		<Button Text="Start" VerticalOptions="Center" HorizontalOptions="Center" x:Name="StartButton" />
 		<StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Orientation="Vertical" IsVisible="{Binding IsBusy}">
 			<ActivityIndicator IsRunning="{Binding IsBusy}" />
 			<Label FontAttributes="None" FontSize="Medium" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="Loading Data ..." />
