Grouped products list containing popular items for this user Small Changes on DataModel Basic Icons

--- a/ConvenienceSystemApp/ConvenienceSystemApp/pages/ProductsPage.xaml
+++ b/ConvenienceSystemApp/ConvenienceSystemApp/pages/ProductsPage.xaml
@@ -9,6 +9,9 @@
       AbsoluteLayout.LayoutFlags="All"
       HorizontalOptions="CenterAndExpand"
       ItemsSource="{Binding Products}"
+      IsGroupingEnabled="true"
+      GroupDisplayBinding="{Binding Name}"
+      GroupShortNameBinding ="{Binding ShortName}"
       x:Name="productListView">
       <ListView.ItemTemplate>
         <DataTemplate>
