--- a/ConvenienceSystemApp/ConvenienceSystemApp/pages/UserPage.xaml
+++ b/ConvenienceSystemApp/ConvenienceSystemApp/pages/UserPage.xaml
@@ -9,13 +9,13 @@
       AbsoluteLayout.LayoutFlags="All"
       HorizontalOptions="CenterAndExpand"
       x:Name="userListView">
-      <!--<ListView.ItemTemplate>
-        <DataTemplate>
-          <TextCell Text="{Binding username}" />
-        </DataTemplate>
-      </ListView.ItemTemplate>-->
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding userString}" Detail="{Binding debtString}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
 
-    </ListView>
+        </ListView>
     
     <Label   AbsoluteLayout.LayoutBounds="0.95, 0.05, 0.35, 0.1"
              AbsoluteLayout.LayoutFlags="All"
