Current Debt for Users (App) userlist is getting updated after buying (App) Workaround for localization issues in Double/string conversions (Webclient) Changed UI for State to checkboxes (Webclient)

--- a/ConvenienceSystemApp/ConvenienceSystemApp/pages/UserPage.xaml
+++ b/ConvenienceSystemApp/ConvenienceSystemApp/pages/UserPage.xaml
@@ -56,13 +56,9 @@
              FontAttributes="Bold"
              x:Name="LastBuyLabel"
              HorizontalOptions="CenterAndExpand"
-             BackgroundColor="Fuchsia"
+             BackgroundColor="White"
                />
 
-
-    
-
-    
 
   </AbsoluteLayout>
 </ContentPage>
