--- a/ConvenienceSystemApp/ConvenienceSystemApp/pages/UserPage.xaml
+++ b/ConvenienceSystemApp/ConvenienceSystemApp/pages/UserPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ConvenienceSystemApp.pages.UserPage"
@@ -55,7 +55,6 @@
              AbsoluteLayout.LayoutFlags="All"
              FontAttributes="Bold"
              x:Name="LastBuyLabel"
-             HorizontalOptions="CenterAndExpand"
              BackgroundColor="White"
                />
 
